--- a/NLP 01. Text Cleaning.ipynb
+++ b/NLP 01. Text Cleaning.ipynb
@@ -2,10 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "scrolled": false
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os.path\n",
@@ -44,7 +42,16 @@
     "    key = character_data_corpus[i][0]\n",
     "    value = character_data_corpus[i][1]\n",
     "    CharacterLookup[key] = value\n",
-    "    \n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "   \n",
     "# Creating a dictionary to link lineID to line text\n",
     "fml = open(os.path.join('cornell_movie_dialogs_corpus', 'movie_lines.txt')).read().split('\\n')\n",
     "movie_line_corpus = []\n",
@@ -75,7 +82,24 @@
     "        # Storing questions and their corresponding responses for later use\n",
     "        for i in range(len(conversation_flow)-1):\n",
     "            questionArray.append(conversation_flow[i])\n",
-    "            responseArray.append(conversation_flow[i+1])\n",
+    "            responseArray.append(conversation_flow[i+1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "questionArray[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "            \n",
     "\n",
     "# Store the actual conversations by looking up the lineIDs and removing punctuations         \n",
@@ -93,33 +117,6 @@
     "with open(os.path.join('pickles','response.pickle'), 'wb') as handle:\n",
     "    pickle.dump(responseData, handle, protocol=pickle.HIGHEST_PROTOCOL) "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['How', 'many', 'people', 'were', 'in', 'your', 'old', 'school']"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "questionData[138]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
