--- a/NLP 03. Predicting Responses.ipynb
+++ b/NLP 03. Predicting Responses.ipynb
@@ -2,11 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'state_h' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-7-9d559e8b179d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[1;31m# Output will be the next target token\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[1;31m# 3) Repeat with the current target token and current states\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 14\u001b[1;33m \u001b[0mencoder_states\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mstate_h\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstate_c\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     15\u001b[0m \u001b[1;31m# Define sampling models\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[0mencoder_model\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mModel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mencoder_inputs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mencoder_states\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'state_h' is not defined"
+     ]
+    }
+   ],
    "source": [
+    "from keras.models import Model\n",
+    "from keras.layers import Input, LSTM, Dense\n",
+    "from keras.models import load_model\n",
     "\n",
+    "encoder_inputs = Input(shape=(None, 2008))\n",
+    "model = load_model('s2s.h5')\n",
     "# Next: inference mode (sampling).\n",
     "# Here's the drill:\n",
     "# 1) encode input and retrieve initial decoder state\n",
@@ -14,7 +31,7 @@
     "# and a \"start of sequence\" token as target.\n",
     "# Output will be the next target token\n",
     "# 3) Repeat with the current target token and current states\n",
-    "\n",
+    "encoder_states = [state_h, state_c]\n",
     "# Define sampling models\n",
     "encoder_model = Model(encoder_inputs, encoder_states)\n",
     "\n",
@@ -44,7 +61,7 @@
     "    # Generate empty target sequence of length 1.\n",
     "    target_seq = np.zeros((1, 1, num_decoder_tokens))\n",
     "    # Populate the first character of target sequence with the start character.\n",
-    "    target_seq[0, 0, 0] = 1.\n",
+    "    target_seq[0, 0, target_token_index['\\t']] = 1.\n",
     "\n",
     "    # Sampling loop for a batch of sequences\n",
     "    # (to simplify, here we assume a batch of size 1).\n",
@@ -84,6 +101,13 @@
     "    print('Input sentence:', input_texts[seq_index])\n",
     "    print('Decoded sentence:', decoded_sentence)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
